--- a/AuthNow/Views/Home/Index.cshtml
+++ b/AuthNow/Views/Home/Index.cshtml
@@ -5,37 +5,37 @@
 
 
 
-
-<div class="jumbotron">
+@*<div class="jumbotron">
     
     <h1>WHY GRINLIGHT</h1>
-    <p class="lead">More often than not we are met with circumstances we least expected. </p>
+    <p style="text-align: left" class="lead">We know it's sometimes difficult to ask so we make it simple for you. </p>
     <p><a href="http://asp.net" class="btn btn-success btn-lg">Learn more &raquo;</a></p>
+</div>*@
+
+<div class="row home-wrapper">
+    <div><h2>The most trusted fundraising platform</h2></div>
+    
+        <div class="col-md-4">
+            <h4>Free & Easy</h4>
+            <p>
+                Start accepting donations in minutes for free. We know it can be difficult sometimes to ask, so we made it easy for you.
+            </p>
+            <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">How it works &raquo;</a></p>
+        </div>
+        <div class="col-md-4">
+            <h4>Trust</h4>
+            <p>This platform is the safest place to give and receive donations. Your donation is protected.</p>
+            <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        </div>
+        <div class="col-md-4">
+            <h4>24/7 Support</h4>
+            <p>Our campaign coaches are available 24/7 and ready to provide support and answer all your questions.</p>
+            <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Ask a question &raquo;</a></p>
+        </div>
+   
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
-
-<div class="row">
+<div class="row home-wrapper">
     <h2>Featured Campaigns</h2>
     <div class="col-md-3">
         <div class="fc-small">
@@ -78,7 +78,7 @@
                 <a>
                     <h6>Put Title Somewhere here</h6>
                 </a>
-                <p>GHS 1000</p>
+                <p>GHS 1020</p>
             </div>
             <div class="fc-small-pbar">
                 <div class="progress">
@@ -88,15 +88,18 @@
                     </div>
                 </div>
             </div>
-            <div class="fc-small-info">
-                <div>
-                    <p>Days Left</p>
-                    <p>32</p>
-                </div>
+            <div class="fc-small-info">                
+                    <span class="pull-left overview-camp-goal">
+                        Goal<br /> GHS 30, 000
+                    </span>
+                    <span class="pull-right overview-camp-days">
+                        Days Left<br>322                                                
+                    </span> 
+                              
             </div>
-
         </div>
     </div>
+    
     <div class="col-md-3">
         <div class="fc-small">
             <div class="fc-small-img">
