--- a/AuthNow/Views/Shared/_FooterPartial.cshtml
+++ b/AuthNow/Views/Shared/_FooterPartial.cshtml
@@ -4,7 +4,7 @@
         <div class="container">
             <div class="row footer-row">
                 <div class="col-md-3">
-                    <h6>About GreenLight</h6>
+                    <h6>About GrinLight</h6>
                     <ul>
                         <li>@Html.ActionLink("About Us", "About", "Home")</li>
                         <li>@Html.ActionLink("Fundraising Ideas", "About", "Home")</li>
@@ -37,7 +37,7 @@
                 </div>
             </div>
         </div>
-        <p>&copy; @DateTime.Now.Year - GreenLight Inc.</p>
+        <p>&copy; @DateTime.Now.Year - GrinLight. All Rights Reserved</p>
     </div>
     
 </footer>
