--- a/AuthNow/Views/Shared/_NavBarPartial.cshtml
+++ b/AuthNow/Views/Shared/_NavBarPartial.cshtml
@@ -10,7 +10,10 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                @*<li>@Html.ActionLink("Home", "Index", "Home")</li>*@
+                <li>@Html.ActionLink("Campaigns", "Index", "Campaigns")</li>
+                <li>@Html.ActionLink("Transactions", "Index", "Transactions")</li>
+                <li>@Html.ActionLink("Donors", "Index", "Donors")</li>
                 @*<li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
             </ul>
