--- a/AuthNow/Content/Site.css
+++ b/AuthNow/Content/Site.css
@@ -92,8 +92,14 @@ textarea {
 }
 
 .fc-small {
-    border: 1px dotted #808080;
-    padding: 5px;
+    border: 1px solid #808080;
+    padding: 5px;    
+}
+
+.fc-small-category{
+    
+    text-align: right;
+   
 }
 
 .fc-small-img img{
@@ -109,6 +115,25 @@ textarea {
     font-weight:bold;
     font-size:medium;
 }
+
+.fc-small-info {
+   
+}
+
+.overview-camp-goal{
+    padding:0;
+    margin: 0;
+}
+
+.overview-camp-days{
+    text-align: right;
+    padding:0;
+    margin: 0;
+}
+
+
+
+
 
 
 .footer-row{
@@ -131,3 +156,71 @@ textarea {
     margin: 0;
     padding: 0;
 }
+
+
+.camp-current-amt {
+    margin: 0;
+    padding: 10px 10px 30px 0;
+}
+
+.camp-title {
+    padding: 10px;
+    border: 1px solid #dddddd;
+}
+
+.camp-pic{
+    padding: 10px;
+    border: 1px solid #dddddd;
+}
+
+.camp-goal{
+    margin: 0;
+    padding: 0;
+}
+
+.camp-days{
+    text-align: right;
+    padding:0;
+}
+
+.camp-desc {
+    padding: 10px;
+    
+}
+
+.camp-desc p{
+    font-size: medium;
+}
+
+.camp-donor-no{
+    padding-top:20px;
+    padding-bottom:10px;
+}
+
+.camp-recent-donation h5{
+    margin: 0;
+    padding: 0;
+}
+
+.camp-recent-donation p{
+    color: #808080;
+    font-style: italic;
+    font-size: 10px;
+}
+
+.camp-donor-info{
+    padding-bottom: 20px;
+}
+
+.home-wrapper h2{
+     text-align:center;
+     color:#ff9800;
+     padding:50px;
+}
+
+.home-wrapper h4{  
+    text-align:center;   
+     color:#4caf50 ;    
+}
+
+
