--- a/AuthNow/Views/Account/Login.cshtml
+++ b/AuthNow/Views/Account/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@using AuthNow.Models
 @model LoginViewModel
 @{
-    ViewBag.Title = "Log in";
+    ViewBag.Title = "Log in to GrinLight";
 }
 
 <h2>@ViewBag.Title</h2>
@@ -37,13 +37,17 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Log in" class="btn btn-success" />
+                    <div class="col-md-offset-2 col-md-10">                        
+                        <input type="submit" value="Log in" class="btn btn-success" />                        
                     </div>
+
                 </div>
-                <p>
-                    @Html.ActionLink("Register as a new user", "Register")
-                </p>
+                <div class="col-md-offset-2 col-md-10">
+                    
+                        New to GrinLight? @Html.ActionLink("Sign up for free", "Register")
+                    
+                </div>
+                
                 @* Enable this once you have account confirmation enabled for password reset functionality
                     <p>
                         @Html.ActionLink("Forgot your password?", "ForgotPassword")
