--- a/AuthNow/Views/Shared/_AuthUsersLayoutPage.cshtml
+++ b/AuthNow/Views/Shared/_AuthUsersLayoutPage.cshtml
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>@ViewBag.Title</title>
+    <title>@ViewBag.Title | GrinLight</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
